--- a/catalog.html
+++ b/catalog.html
@@ -1,63 +1,62 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <title>Каталог</title>
-</head>
-<body>
-  <header class="page-header">
-    <nav class="navigation">
-      <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" src="" alt="Логотип барбершоп «Бородинский»">
-              </a>
-      <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link" href="about.html">О нас</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link navigation-link-current" href="catalog.html">Каталог</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="faq.html">Частые вопросы</a>
-        </li>
-      </ul>
+  <head>
+    <meta charset="utf-8">
+    <title>Каталог</title>
+  </head>
+  <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" alt="Логотип барбершоп «Бородинский»" src="">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О нас</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="catalog.html">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="faq.html">Частые вопросы</a>
+          </li>
+        </ul>
 
-      <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-                    <span class="visually-hidden">Поиск</span>
-                  </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-                    <span class="visually-hidden">Корзина</span>
-                  </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-                    Вход
-                  </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="main-inner">
-    <header class="inner-header">
-      <h1 class="inner-header-title">Каталог</h1>
-      <ul class="breadcrumbs">
-        <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="index.html">Главная</a>
-        </li>
-        <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link">Каталог</a>
-        </li>
-      </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">
+              <span class="visually-hidden">Корзина</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Профиль</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <section class="catalog-products">
-      <h2 class="visually-hidden">Список товаров с фильтрами</h2>
-      <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-        <fieldset class="catalog-filter-group">
+
+    <main class="main-inner">
+      <header class="inner-header">
+        <h1 class="inner-header-title">Каталог</h1>
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link">Каталог</a>
+          </li>
+        </ul>
+      </header>
+
+      <section class="catalog-products">
+        <h2 class="visually-hidden">Список товаров с фильтрами</h2>
+        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Цена</legend>
             <button class="range-toggle toggle-min" type="button">
               <span class="visually-hidden">Изменить минимальную цену.</span>
@@ -83,7 +82,7 @@
                 <label class="control">
                   <input class="visually-hidden control-input" type="checkbox" name="bed-head-for-men">
                   <span class="control-mark"></span>
-                <span class="control-label">Bed Head for Men</span>
+              <span class="control-label">Bed Head for Men</span>
                 </label>
               </li>
               <li class="catalog-filter-item">
@@ -150,9 +149,12 @@
               </li>
             </ul>
           </fieldset>
-        <button class="button" type="submit">Показать</button>
-      </form>
-       <form class="sorting-type">
+
+          <button class="button" type="submit">Показать</button>
+        </form>
+
+
+        <form class="sorting-type">
           <label class="visually-hidden" for="sorting">Сортировка</label>
           <select class="select-control" id="sorting" name="sorting">
             <option value="popular">Сначала популярное</option>
@@ -164,10 +166,9 @@
         <a href="#" class="button button-light">
           <span class="visually-hidden">Показать список</span>
         </a>
-<a class="button" href="#">
+        <a class="button" href="#">
           <span class="visually-hidden">Показать карточки</span>
         </a>
-
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="product.html">
@@ -218,6 +219,7 @@
             <a class="product-card-button button" href="#">Купить</a>
           </li>
         </ul>
+
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-prev pagination-disabled">
@@ -246,56 +248,57 @@
           </li>
         </ul>
         <button class="button pagination-show-more" type="button">Показать ещё</button>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="page-footer">
-    <section class="footer-contacts">
-      <h2 class="visually-hidden">Контакты</h2>
-      <img class="footer-contacts-logo" src="" alt="Логотип барбершоп «Бородинский»">
-      <address class="footer-contacts-address">
-        <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-        <a class="footer-contacts-address-phone" href="tel:8005558628">+7 800 555-86-28</a>
-      </address>
-      <a class="footer-contacts-map-link" href="#">Как нас найти?</a>
-    </section>
+    <footer class="page-footer">
+      <section class="footer-contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <img class="footer-contacts-logo" src="" alt="Логотип Барбершоп «Бородинский»">
+        <address class="footer-contacts-address">
+          <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <a class="footer-contacts-address-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+        </address>
+        <a class="footer-contacts-map-link" href="#">Как нас найти?</a>
+      </section>
 
-    <section class="newsletter">
-      <h2 class="page-footer-title">Получайте лучшие предложения</h2>
-      <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-        <p class="newsletter-email">
-          <label class="visually-hidden" for="newsletter-email">Email</label>
-          <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-        </p>
-        <button class="button newsletter-button" type="submit">
-              <span class="visually-hidden">Отправить</span>
-            </button>
-      </form>
-    </section>
+      <section class="newsletter">
+        <h2 class="page-footer-title">Получайте лучшие предложения</h2>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
 
-    <section class="footer-social">
-      <h2 class="page-footer-title">Давайте дружить</h2>
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button" href="#">
-                <span class="visually-hidden">Твиттер</span>
-              </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
-                <span class="visually-hidden">Вконтакте</span>
-              </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
-                <span class="visually-hidden">Инстаграм</span>
-              </a>
-        </li>
-      </ul>
-      <p class="about-text">Сделано в
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
-    </section>
+          <p class="newsletter-email">
+            <label class="visually-hidden" for="newsletter-email">Email</label>
+            <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+          </p>
 
-  </footer>
-</body>
+          <button class="button newsletter-button" type="submit">
+            <span class="visually-hidden">Отправить</span>
+          </button>
+
+        </form>
+      </section>
+
+      <section class="footer-social">
+        <h2 class="page-footer-title">Давайте дружить</h2>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+        </ul>
+        <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+      </section>
+    </footer>
+  </body>
 </html>
