--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -40,7 +41,7 @@
 
     <main class="main-index">
       <h1 class="visually-hidden">Барбершоп «Бородинский»</h1>
-      <img class="logo" src="" alt="Логотип Барбершопа «Бородинский»">
+      <img class="logo" src="image/logo-full.svg" width="326" height="134" alt="Логотип Барбершопа «Бородинский»">
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -83,7 +84,7 @@
       </section>
       <section class="gallery">
         <h2 class="gallery-title">Фотогалерея</h2>
-        <img class="slider-image" src="" alt="Примеры работ" >
+        <img class="slider-image" src="image/gallery-1.jpg" alt="Примеры работ" width="390" height="250">
         <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущее фото</span>
         </button>
@@ -175,7 +176,7 @@
     <footer class="page-footer">
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <img class="footer-contacts-logo" src="" alt="Логотип Барбершоп «Бородинский»">
+        <img class="footer-contacts-logo" src="image/logo-footer.svg" alt="Логотип Барбершоп «Бородинский»" width="187" height="24">
         <address class="footer-contacts-address">
           <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           <a class="footer-contacts-address-phone" href="tel:+78005558628">+7 800 555-86-28</a>
