--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип барбершоп «Бородинский»" src="">
+          <img class="page-header-logo" alt="Логотип барбершоп «Бородинский»" src="image/logo-footer.svg" width="140" height="18">
         </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -154,26 +154,28 @@
         <button class="button" type="submit">Показать</button>
       </form>
 
-
-      <form class="sorting-type">
-        <label class="visually-hidden" for="sorting">Сортировка</label>
-        <select class="select-control" id="sorting" name="sorting">
+      <!-- Сортировка -->
+      <div class="sorting-container">
+        <form class="sorting-type">
+          <label class="visually-hidden" for="sorting">Сортировка</label>
+          <select class="select-control" id="sorting" name="sorting">
             <option value="popular">Сначала популярное</option>
             <option value="cheap">Сначала дешёвое</option>
             <option value="expensive">Сначала дорогое</option>
           </select>
-        <button class="visually-hidden" type="submit">Отсортировать продукты</button>
-      </form>
-      <a href="#" class="button button-light">
+          <button class="visually-hidden" type="submit">Отсортировать продукты</button>
+        </form>
+        <a href="#" class="button button-light">
           <span class="visually-hidden">Показать список</span>
         </a>
-      <a class="button" href="#">
+        <a class="button" href="#">
           <span class="visually-hidden">Показать карточки</span>
         </a>
+      </div>
       <ul class="product-list">
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-              <img class="product-card-image" src="" alt="">
+              <img class="product-card-image" src="image/catalog/catalog-1.jpg" width="220" height="168" alt="">
               <h3 class="product-card-title">Шампунь для мужчин Brews Daily</h3>
             </a>
           <b class="product-card-price">744 ₽</b>
@@ -181,7 +183,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="">
+              <img class="product-card-image" src="image/catalog/catalog-2.jpg" width="220" height="168" alt="">
               <h3 class="product-card-title">Syoss шампунь Men Power &amp; Strength</h3>
             </a>
           <b class="product-card-price">160 ₽</b>
@@ -189,7 +191,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="">
+              <img class="product-card-image" width="220" height="168" src="image/catalog/catalog-3.jpg" alt="">
               <h3 class="product-card-title">Schauma шампунь для мужчин «Сила и объём с хмелем»</h3>
             </a>
           <b class="product-card-price">94 ₽</b>
@@ -197,7 +199,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="">
+              <img class="product-card-image" src="image/catalog/catalog-4.jpg" width="220" height="168" alt="">
               <h3 class="product-card-title">Nivea Men шампунь-уход «Экстремальная свежесть с ментолом»</h3>
             </a>
           <b class="product-card-price">173 ₽</b>
@@ -205,7 +207,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="">
+              <img class="product-card-image" src="image/catalog/catalog-5.jpg" width="220" height="168" alt="">
               <h3 class="product-card-title">Шампунь Amplifier Thickening</h3>
             </a>
           <b class="product-card-price">441 ₽</b>
@@ -213,7 +215,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="">
+              <img class="product-card-image" src="image/catalog/catalog-6.jpg" width="220" height="168" alt="">
               <h3 class="product-card-title">American Crew шампунь Anti-Dandruff</h3>
             </a>
           <b class="product-card-price">904 ₽</b>
@@ -255,7 +257,7 @@
   <footer class="page-footer">
     <section class="footer-contacts">
       <h2 class="visually-hidden">Контакты</h2>
-      <img class="footer-contacts-logo" src="" alt="Логотип Барбершоп «Бородинский»">
+      <img class="footer-contacts-logo" src="image/logo-footer.svg" alt="Логотип Барбершоп «Бородинский»" width="183" height="21">
       <address class="footer-contacts-address">
         <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
         <a class="footer-contacts-address-phone" href="tel:+78005558628">+7 800 555-86-28</a>
@@ -299,7 +301,8 @@
         </li>
       </ul>
       <p class="about-text">Сделано в
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+      </p>
     </section>
   </footer>
 </body>
