--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип барбершоп «Бородинский»" src="image/logo-footer.svg" width="140" height="18">
+          <img class="page-header-logo" alt="Логотип барбершоп «Бородинский»" src="image/logo-short-light.svg" width="140" height="18">
         </a>
       <ul class="navigation-list">
         <li class="navigation-item">
